--- a/package.json
+++ b/package.json
@@ -1,27 +1,37 @@
 {
-  "name": "github-fetcher-fullstack-v2",
+  "name": "gravitas",
   "version": "1.0.0",
-  "description": "",
+  "description": "a shared experience",
   "main": "index.js",
-  "scripts": {
-    "react-dev": "webpack -d --watch",
-    "server-dev": "nodemon server/index.js"
-  },
-  "author": "KKR",
-  "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
     "webpack": "^2.2.1"
   },
   "dependencies": {
-    "express": "^4.15.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "jquery": "^3.1.1",
-    "mysql": "^2.13.0"
-  }
+    "angular": "^1.6.3",
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
+    "jquery": "^3.2.1",
+    "mongoose": "^4.8.6",
+    "mysql": "^2.13.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
+  },
+  "scripts": {
+    "react-dev": "webpack -d --watch",
+    "server-dev": "nodemon --inspect server/index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hackreactor/hrsf77-mvp-starter.git"
+  },
+  "author": "KKR",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/hackreactor/hrsf77-mvp-starter/issues"
+  },
+  "homepage": "https://github.com/hackreactor/hrsf77-mvp-starter#readme"
 }
