--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^15.6.1"
   },
   "scripts": {
+    "start": "node server.js",
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon --inspect server/index.js"
   },
