--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-dom": "^15.6.1"
   },
   "scripts": {
-    "start": "node server/index.js",
+    "start": "node /server/index.js",
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon --inspect server/index.js"
   },
