--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "start": "node server/index.js",
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon --inspect server/index.js",
-    "postinstall": "npm run react-dev"
+    "postinstall": "npm run webpack"
   },
   "repository": {
     "type": "git",
