--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "jquery": "^3.2.1",
     "mysql": "^2.13.0",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "webpack": "^2.2.1"
   },
   "scripts": {
     "start": "node server/index.js",
