--- a/package.json
+++ b/package.json
@@ -3,13 +3,6 @@
   "version": "1.0.0",
   "description": "a shared experience",
   "main": "index.js",
-  "devDependencies": {
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
-    "webpack": "^2.2.1"
-  },
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
@@ -17,12 +10,18 @@
     "mysql": "^2.13.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "webpack": "^2.6.1"
+    "webpack": "^2.6.1",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0"
   },
   "scripts": {
     "start": "node server/index.js",
     "react-dev": "webpack -d --watch",
-    "server-dev": "nodemon --inspect server/index.js"
+    "server-dev": "nodemon --inspect server/index.js",
+    "postinstall": "webpack -p --config webpack.config.js --progress --colors"
+
   },
   "repository": {
     "type": "git",
