--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "start": "node server/index.js",
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon --inspect server/index.js",
-    "postinstall": "webpack -p --config webpack.config.js --progress --colors"
-
+    "postinstall": "webpack"
   },
   "repository": {
     "type": "git",
