--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "is-builtin-module": "^1.0.0",
     "jquery": "^3.2.1",
     "mysql": "^2.13.0",
     "react": "^15.6.1",
