--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ coverage
 
 # Compiled Dirs (http://nodejs.org/api/addons.html)
 build/
-dist/
+dist/bundle.js
 
 # Dependency directorys
 # Deployed apps should consider commenting these lines out:
@@ -29,3 +29,5 @@ node_modules/
 bower_components/
 # Webstorm files
 *.idea
+# Config files
+*.config.js
