--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "morgan": "^1.8.2",
     "webpack": "^2.2.1"
   },
   "dependencies": {
-    "angular": "^1.6.3",
+    "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "express-session": "^1.15.3",
     "jquery": "^3.2.1",
-    "mongoose": "^4.8.6",
     "mysql": "^2.13.0",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "request": "^2.81.0",
+    "session-file-store": "^1.0.0"
   },
   "scripts": {
     "react-dev": "webpack -d --watch",
