--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
-    "morgan": "^1.8.2",
-    "webpack": "^2.2.1"
+    "morgan": "^1.8.2"
   },
   "dependencies": {
     "bluebird": "^3.5.0",
@@ -21,11 +20,14 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "request": "^2.81.0",
+    "webpack": "^2.2.1",
     "session-file-store": "^1.0.0"
   },
   "scripts": {
     "react-dev": "webpack -d --watch",
-    "server-dev": "nodemon --inspect server/index.js"
+    "server-dev": "nodemon --inspect server/index.js",
+    "server": "nodemon server/index.js"
+
   },
   "repository": {
     "type": "git",
