--- a/package.json
+++ b/package.json
@@ -3,24 +3,32 @@
   "version": "1.0.0",
   "description": "a shared experience",
   "main": "index.js",
+  "devDependencies": {
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "morgan": "^1.8.2"
+  },
   "dependencies": {
+    "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
+    "express-session": "^1.15.3",
     "express": "^4.15.3",
     "is-builtin-module": "^1.0.0",
     "jquery": "^3.2.1",
     "mysql": "^2.13.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "webpack": "^2.6.1",
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0"
+    "request": "^2.81.0",
+    "webpack": "^2.2.1",
+    "session-file-store": "^1.0.0"
   },
   "scripts": {
     "start": "node server/index.js",
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon --inspect server/index.js",
+    "server": "nodemon server/index.js",
     "heroku-postbuild": "webpack --config webpack.config.js"
   },
   "repository": {
