--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
-    "express-session": "^1.15.3",
     "express": "^4.15.3",
+    "express-session": "^1.15.3",
     "is-builtin-module": "^1.0.0",
     "jquery": "^3.2.1",
     "mysql": "^2.13.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-modal-dialog": "^4.0.7",
+    "react-timestamp": "^4.2.1",
     "request": "^2.81.0",
     "session-file-store": "^1.0.0",
     "webpack": "^2.2.1"
