--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "react-timestamp": "^4.2.1",
     "request": "^2.81.0",
     "session-file-store": "^1.0.0",
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3",
     "webpack": "^2.2.1"
   },
   "scripts": {
     "start": "node server/index.js",
     "react-dev": "webpack -d --watch",
-    "server-dev": "nodemon --inspect server/index.js",
-    "server": "nodemon server/index.js",
+    "server-dev": "nodemon --delay 2 --inspect server/index.js",
+    "server": "nodemon --delay 2 server/index.js",
     "heroku-postbuild": "webpack --config webpack.config.js"
   },
   "repository": {
